--- a/.github/workflows/main_azuretp2.yml
+++ b/.github/workflows/main_azuretp2.yml
@@ -42,7 +42,13 @@ jobs:
           path: |
             release.zip
             !venv/
-
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Lancement des tests
+        run: |
+          python -m pytest -v
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
